[package]
name = "forser"
version = "0.1.0"
edition = "2021"
default-run = "forser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
thiserror = "1.0.57"
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.6"
